--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,23 @@
+@import url('https://fonts.googleapis.com/css2?family=Bonheur+Royale&family=Noto+Sans+Thai:wght@100..900&display=swap');
 @import "tailwindcss";
+
+
+@theme {
+    --font-logo: "Bonheur Royale", sans-serif;
+    --color-matt: #131313;
+    --color-light-matt: #222222;
+    --color-light-border: #151515;
+    /* 🧱 Container */
+    --container-padding: 2rem;
+    --container-center: true;
+    --container-2xl: 1400px;
+
+    /* 🎨 Colors */
+    --color-border: hsl(var(--border));
+    --color-input: hsl(var(--input));
+    --color-ring: hsl(var(--ring));
+    --color-background: hsl(var(--background));
+    --color-foreground: hsl(var(--foreground));
+
+
+}
